--- a/WhatOOP/WhatOOP.csproj
+++ b/WhatOOP/WhatOOP.csproj
@@ -59,6 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DapperHelper.cs" />
+    <Compile Include="GenericFunction.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TaskDailyEntity.cs" />
